k8s/check_scripts/svc_ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/change-cause: kubectl expose deploy web-frontend --namespace=web
      --name=web-frontend-svc --port=80 --target-port=80 --type=NodePort --record=true
      --dry-run=client --output=yaml
  name: web-frontend-svc
  namespace: web
spec:
  type: NodePort
  selector:
    app: web-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
